Revert "build: dont use empty values by default"
This reverts commit da3c94933893e6b359b01b9609a376a79b083819.

--- a/etc/ncp-config.d/fail2ban.cfg
+++ b/etc/ncp-config.d/fail2ban.cfg
@@ -42,7 +42,7 @@
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "optional@email.com",
+      "value": "",
       "suggest": "optional@email.com"
     }
   ]
