--- a/etc/ncp-config.d/freeDNS.cfg
+++ b/etc/ncp-config.d/freeDNS.cfg
@@ -15,7 +15,7 @@
     {
       "id": "UPDATEHASH",
       "name": "Update Hash",
-      "value": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJK1234567",
+      "value": "",
       "suggest": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJK1234567"
     },
     {
