--- a/etc/ncp-config.d/letsencrypt.cfg
+++ b/etc/ncp-config.d/letsencrypt.cfg
@@ -9,7 +9,7 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.ownyourbits.com",
+      "value": "",
       "suggest": "mycloud.ownyourbits.com"
     },
     {
@@ -21,7 +21,7 @@
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "mycloud@ownyourbits.com",
+      "value": "",
       "suggest": "mycloud@ownyourbits.com"
     },
     {
