--- a/etc/ncp-config.d/nc-hdd-monitor.cfg
+++ b/etc/ncp-config.d/nc-hdd-monitor.cfg
@@ -21,7 +21,7 @@
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "optional@email.com",
+      "value": "",
       "suggest": "optional@email.com"
     }
   ]
