multi-factor-authentication.cfg: Fix typos and improve concision.
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -2,8 +2,8 @@
   "id": "multi-factor-authentication",
   "name": "Activate multi factory authentication for SSH login",
   "title": "Multi-Factor-Authentication",
-  "description": "Choose among different (single and multi factor) authentication methods for SSH login.",
-  "info": "The default method (i.e. this app being disabled) is 'password only'.\nPlease not that single factor authentication methods can not be enabled at the same time as multi factor authentication methods.\nThe TOTP authentication requires a compatible app to be used, e.g. FreeOTP, Keepass2Android, Google Authenticator or Authy.\nIf you enable multiple options, they will act as alternatives.",
+  "description": "Choose the authentication method for SSH login.",
+  "info": "The default method is 'password only'.\nPlease note that single factor authentication methods can not be enabled at the same time as multi factor authentication methods.\nThe TOTP authentication requires a compatible app to be used, e.g. FreeOTP, Keepass2Android, Google Authenticator or Authy.\nIf you enable multiple options, they will act as alternatives.",
   "infotitle": "MFA notes",
   "params": [
     {
