samba.sh: Implement group filter for NC users
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/samba.cfg
+++ b/etc/ncp-config.d/samba.cfg
@@ -17,6 +17,11 @@
       "name": "Password",
       "value": "ownyourbits",
       "type": "password"
+    },
+    {
+      "id": "FILTER_BY_GROUP",
+      "name": "Filter by NC group:",
+      "value": ""
     }
   ]
 }
