multi-factor-authentication.*: Provide 5 fields for SSH pub keys
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -37,11 +37,39 @@
       "type": "bool"
     },
     {
-      "id": "SSH_PUBLIC_KEY",
-      "name": "SSH Public Key",
+      "id": "SSH_PUBLIC_KEY_1",
+      "name": "SSH Public Key 1",
       "value": "",
       "suggest": "Paste your public key here",
       "allow_unsafe": "true"
+    },
+    {
+    "id": "SSH_PUBLIC_KEY_2",
+    "name": "SSH Public Key 2",
+    "value": "",
+    "suggest": "Paste your public key here",
+    "allow_unsafe": "true"
+    },
+    {
+    "id": "SSH_PUBLIC_KEY_3",
+    "name": "SSH Public Key 3",
+    "value": "",
+    "suggest": "Paste your public key here",
+    "allow_unsafe": "true"
+    },
+    {
+    "id": "SSH_PUBLIC_KEY_4",
+    "name": "SSH Public Key 4",
+    "value": "",
+    "suggest": "Paste your public key here",
+    "allow_unsafe": "true"
+    },
+    {
+    "id": "SSH_PUBLIC_KEY_5",
+    "name": "SSH Public Key 5",
+    "value": "",
+    "suggest": "Paste your public key here",
+    "allow_unsafe": "true"
     }
   ]
 }
