build: update armbian branches
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/nc-update-nextcloud.cfg
+++ b/etc/ncp-config.d/nc-update-nextcloud.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-update-nextcloud",
   "title": "nc-update-nextcloud",
   "description": "Update current instance to a new Nextcloud version",
-  "info": "Set to 0 to update to the latest avaliable version",
+  "info": "Set to 0 to update to the latest available version",
   "infotitle": "",
   "params": [
     {
