Removed added comment about btrfs snapshots
could be confusing

--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -2,7 +2,7 @@
   "id": "nc-backup",
   "name": "nc-backup",
   "title": "nc-backup",
-  "description": "Backup this NC instance to a file. This will always include the current Nextcloud directory and the Database. You can choose to include or exclude the NC user data. If you are using btrfs-snapshots, there is no need to include nc-data.",
+  "description": "Backup this NC instance to a file. This will always include the current Nextcloud directory and the Database. You can choose to include or exclude NC-data.",
   "info": "",
   "infotitle": "",
   "params": [
