nc-backup: add more info to description (#1073)

--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -2,7 +2,7 @@
   "id": "nc-backup",
   "name": "nc-backup",
   "title": "nc-backup",
-  "description": "Backup this NC instance to a file",
+  "description": "Backup this NC instance to a file. This will always include the current Nextcloud directory and the Database. You can choose to include or exclude NC-data.",
   "info": "",
   "infotitle": "",
   "params": [
