--- a/etc/ncp-config.d/samba.cfg
+++ b/etc/ncp-config.d/samba.cfg
@@ -20,7 +20,7 @@
     },
     {
       "id": "FILTER_BY_GROUP",
-      "name": "Filter by NC group:",
+      "name": "Filter by NC group",
       "value": ""
       "suggest": "optional NC group"
     }
