samba: option to apply only to a NC group (#1048)
Signed-off-by: Tobias Knöppler

Co-authored-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/samba.cfg
+++ b/etc/ncp-config.d/samba.cfg
@@ -2,7 +2,7 @@
   "id": "samba",
   "name": "Samba",
   "title": "samba",
-  "description": "SMB/CIFS file server (for Mac/Linux/Windows)",
+  "description": "SMB/CIFS file server (for Mac/Linux/Windows)\nIf a group filter is given, samba shares will only be set up for users of that group.",
   "info": "The username will be the Nextcloud username, and the password will be one we setup here.\nIf we intend to modify the data folder through SAMBA,\nthen we have to synchronize NextCloud to make it aware of the changes.\n\nThis can be done manually or automatically using 'nc-scan' and 'nc-scan-auto'",
   "infotitle": "Instructions for external synchronization",
   "params": [
@@ -17,6 +17,12 @@
       "name": "Password",
       "value": "ownyourbits",
       "type": "password"
+    },
+    {
+      "id": "FILTER_BY_GROUP",
+      "name": "Filter by NC group",
+      "value": ""
+      "suggest": "optional NC group"
     }
   ]
 }
