.drone.yml: Install git and jq for docker build jobs
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ stages:
   services:
     - docker:dind
   script:
+    - apk add git jq
     - git fetch --tags
     - VERSION="$(git describe --tags --always)"
     - VERSION="${VERSION%-*-*}"
