.gitlab-ci.yml: Install bash in docker build job
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
   services:
     - docker:dind
   script:
-    - apk add git jq
+    - apk add git jq bash
     - git fetch --tags
     - ./build-docker.sh "${ARCHITECTURE}" "${CI_REGISTRY}" --push
 #    - VERSION="$(git describe --tags --always)"
