.gitlab-ci.yml: Add debug output
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ stages:
   script:
     - apk add git jq bash
     - git fetch --tags
+    - echo "./build-docker.sh \"${ARCHITECTURE}\" \"${CI_REGISTRY}/${CI_REGISTRY_USER}\" --push"
     - ./build-docker.sh "${ARCHITECTURE}" "${CI_REGISTRY}/${CI_REGISTRY_USER}" --push
 #    - VERSION="$(git describe --tags --always)"
 #    - VERSION="${VERSION%-*-*}"
