--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ stages:
   script:
     - apk add git jq bash
     - git fetch --tags
-    - echo "./build-docker.sh \"${ARCHITECTURE}\" \"${CI_REGISTRY}/${CI_REGISTRY_USER}\" --push"
-    - ./build-docker.sh "${ARCHITECTURE}" "${CI_REGISTRY}/${CI_REGISTRY_USER}" --push
+    - echo "./build-docker.sh \"${ARCHITECTURE}\" \"${CI_REGISTRY_IMAGE}\" --push"
+    - ./build-docker.sh "${ARCHITECTURE}" "${CI_REGISTRY_IMAGE}" --push
 #    - VERSION="$(git describe --tags --always)"
 #    - VERSION="${VERSION%-*-*}"
 #    - RELEASE=$(jq -r .release < etc/ncp.cfg)
