.gitlab-ci.yml: Tag and push docker-builder image
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,5 +67,6 @@ docker-build-docker-builder:
     - |
       if [[ "$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest)" != "$(docker inspect -f '{{ .DockerVersion }}' docker:latest)" ]]
       then
-        docker build --progress=plain . -f ci/images/docker-builder/Dockerfile
+        docker build --progress=plain . -f ci/images/docker-builder/Dockerfile -t "${CI_REGISTRY_IMAGE}/docker-builder:latest"
+        docker push "${CI_REGISTRY_IMAGE}/docker-builder:latest"
       fi
