--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,9 @@ stages:
     - VERSION="$(git describe --tags --always)"
     - VERSION="${VERSION%-*-*}"
     - RELEASE=$(jq -r .release < etc/ncp.cfg)
-    - '[[ "${ARCHITECTURE?}" == "x86"   ]] && { ARCH=amd64; QEMU_ARCH=x86_64; NCP_TAG=x86 }'
-    - '[[ "${ARCHITECTURE?}" == "armhf"   ]] && { ARCH=arm32v7; QEMU_ARCH=arm; NCP_TAG=armhf }'
-    - '[[ "${ARCHITECTURE?}" == "arm64"   ]] && { ARCH=arm64v8; QEMU_ARCH=aarch64; NCP_TAG=arm64 }'
+    - '[[ "${ARCHITECTURE?}" == "x86"   ]] && { ARCH=amd64; QEMU_ARCH=x86_64; NCP_TAG=x86; }'
+    - '[[ "${ARCHITECTURE?}" == "armhf"   ]] && { ARCH=arm32v7; QEMU_ARCH=arm; NCP_TAG=armhf; }'
+    - '[[ "${ARCHITECTURE?}" == "arm64"   ]] && { ARCH=arm64v8; QEMU_ARCH=aarch64; NCP_TAG=arm64; }'
     - docker login -u "${CI_REGISTRY_USER?}" -p "${CI_REGISTRY_PASSWORD?}" "${CI_REGISTRY?}"
     - >
       DOCKER_BUILDKIT=1 docker build --progress=plain . -f docker/debian-ncp/Dockerfile --pull
@@ -67,8 +67,12 @@ docker-build-docker-builder:
   script:
     - docker pull ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "docker-builder:latest not found in \"${CI_REGISTRY_IMAGE}\"!"
     - docker pull docker:latest
+    - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest)"
+    - LATEST="$(docker version -f '{{ .Client.Version }}'
+    - echo "$CURRENT"
+    - echo "$LATEST"
     - |
-      if [[ "$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest)" != "$(docker inspect -f '{{ .DockerVersion }}' docker:latest)" ]]
+      if [[ "$CURRENT" != "$LATEST" ]]
       then
         docker build --progress=plain . -f ci/images/docker-builder/Dockerfile -t "${CI_REGISTRY_IMAGE}/docker-builder:latest"
         docker login -u "${CI_REGISTRY_USER?}" -p "${CI_REGISTRY_PASSWORD?}" "${CI_REGISTRY?}"
