--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ docker-build-docker-builder:
   script:
     - docker pull ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "docker-builder:latest not found in \"${CI_REGISTRY_IMAGE}\"!"
     - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest)"
-    - LATEST="$(docker version -f '{{ .Client.Version }})'
+    - LATEST="$(docker version -f '{{ .Client.Version }}')"
     - echo "$CURRENT"
     - echo "$LATEST"
     - |
