--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,6 +63,8 @@ stages:
   image: python:3.8
   script:
     - pip install selenium
+    - host nextcloudpi
+    - host ${CI_REGISTRY_IMAGE//\//-}-nextcloudpi-${ARCHITECTURE//\//-}
     - ./tests/activation_tests.py "nextcloudpi" "http://selenium:4444/wd/hub"
     - ./tests/nextcloudpi_tests.py "nextcloudpi" "http://selenium:4444/wd/hub"
 
