--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,14 +111,14 @@ docker-build-arm64:
   variables:
     ARCHITECTURE: "arm64"
 
-docker-build-docker-builder:
+build-docker-builder:
   stage: pre-build
   image: docker:latest
   services:
     - docker:dind
   script:
     - docker pull ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "docker-builder:latest not found in \"${CI_REGISTRY_IMAGE}\"!"
-    - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest)"
+    - CURRENT="$(docker inspect -f '{{ .DockerVersion }}' ${CI_REGISTRY_IMAGE}/docker-builder:latest || echo "NONE")"
     - LATEST="$(docker version -f '{{ .Client.Version }}')"
     - echo "$CURRENT"
     - echo "$LATEST"
