.gitlab-ci.yml: Create testable docker images with qemu-static binaries
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/ci/docker/docker-builder/Dockerfile
+++ b/ci/docker/docker-builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM docker:latest
-RUN apk add bash git jq
+RUN apk add bash git jq qemu
 ENTRYPOINT ["/bin/bash", "docker-entrypoint.sh"]
 CMD ["bash"]
