--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,20 @@
+variables:
+  DOCKER_BUILDER_IMAGE: ${CI_REGISTRY_IMAGE}/docker-builder:latest
+
 stages:
   - pre-build
   - build
+  - pre-test
   - test
 
+.docker-login-before-script: &docker-login-before-script
+  before_script:
+    - docker login -u "${CI_REGISTRY_USER?}" -p "${CI_REGISTRY_PASSWORD?} "${CI_REGISTRY?}"
 
 .docker-build-tmpl: &docker-build-tmpl
+  << : *docker-login-before-script
   stage: build
-  image: ${CI_REGISTRY_IMAGE}/docker-builder:latest
+  image: $DOCKER_BUILDER_IMAGE
   services:
     - docker:dind
   script:
@@ -17,7 +25,6 @@ stages:
     - '[[ "${ARCHITECTURE?}" == "x86"   ]] && { ARCH=amd64; ARCH_QEMU=x86_64; NCP_TAG=x86; }'
     - '[[ "${ARCHITECTURE?}" == "armhf"   ]] && { ARCH=arm32v7; ARCH_QEMU=arm; NCP_TAG=armhf; }'
     - '[[ "${ARCHITECTURE?}" == "arm64"   ]] && { ARCH=arm64v8; ARCH_QEMU=aarch64; NCP_TAG=arm64; }'
-    - docker login -u "${CI_REGISTRY_USER?}" -p "${CI_REGISTRY_PASSWORD?}" "${CI_REGISTRY?}"
     - docker pull ${CI_REGISTRY_IMAGE}/nextcloudpi-${NCP_TAG?}:latest || true
     - >
       DOCKER_BUILDKIT=1 docker build --progress=plain . -f docker/debian-ncp/Dockerfile --pull
@@ -53,7 +60,7 @@ stages:
   services:
     - name: selenium/standalone-firefox
       alias: selenium
-    - name: "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}"
+    - name: "${CI_REGISTRY_IMAGE}/ncp-testing-${ARCHITECTURE}:${CI_PIPELINE_IID}"
       alias: nextcloudpi
   image: python:3.8-buster
   script:
@@ -67,6 +74,22 @@ stages:
   image: "${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE}:${CI_PIPELINE_IID}"
   script:
     - ./tests/sysyem_tests.py
+
+.build-test-image-tmpl: &build-test-image-tmpl
+  <<: *docker-login-before-script
+  stage: pre-test
+  image: $DOCKER_BUILDER_IMAGE
+  services:
+    - docker:dind
+  script:
+    - [[ "${ARCHITECTURE?}" == "armhf" ]] && QEMU_ARCH="arm"     || true
+    - [[ "${ARCHITECTURE?}" == "arm64" ]] && QEMU_ARCH="aarch64" || true
+    - |
+    docker build --progress=plain . -f - -t "${CI_REGISTRY_IMAGE}/ncp-testing-${ARCHITECTURE?}:${CI_PIPELINE_IID}" <<-EOF
+    FROM ${CI_REGISTRY_IMAGE}/nextcloudpi-${ARCHITECTURE?}:${CI_PIPELINE_IID}";
+    COPY qemu-${QEMU_ARCH?}-static /usr/bin
+    EOF
+    - docker push "${CI_REGISTRY_IMAGE}/ncp-testing-${ARCHITECTURE?}";
 
 test-docker-x86:
   << : *integration-tests-docker-tmpl
@@ -107,6 +130,7 @@ docker-build-arm64:
     ARCHITECTURE: "arm64"
 
 build-docker-builder:
+  << : *docker-login-before-script
   stage: pre-build
   image: docker:latest
   services:
@@ -120,7 +144,26 @@ build-docker-builder:
     - |
       if [[ "$CURRENT" != "$LATEST" ]]
       then
-        docker build --progress=plain . -f ci/images/docker-builder/Dockerfile -t "${CI_REGISTRY_IMAGE}/docker-builder:latest"
-        docker login -u "${CI_REGISTRY_USER?}" -p "${CI_REGISTRY_PASSWORD?}" "${CI_REGISTRY?}"
+        docker build --progress=plain . -f ci/docker/docker-builder/Dockerfile -t "${CI_REGISTRY_IMAGE}/docker-builder:latest"
         docker push "${CI_REGISTRY_IMAGE}/docker-builder:latest"
       fi
+
+build-arm64-test-image:
+  << : *build-test-image-tmpl
+  variables:
+    ARCHITECTURE: arm64
+
+build-armhf-test-image:
+  << : *build-test-image-tmpl
+  variables:
+    ARCHITECTURE: armhf
+
+tag-amd64-test-image:
+  << : *docker-login-before-script
+  stage: pre-test
+  image: $DOCKER_BUILDER_IMAGE
+  services:
+    - docker:dind
+  script:
+    - docker tag "${CI_REGISTRY_IMAGE}/nextcloudpi-amd64:${CI_PIPELINE_IID}" "${CI_REGISTRY_IMAGE}/ncp-testing-amd64:${CI_PIPELINE_IID}"
+    - docker push "${CI_REGISTRY_IMAGE}/ncp-testing-amd64";
