mirror-to-gitlab.yml: Remove gitlab.com host ssh key before pushing
Signed-off-by: Tobias K <6317548+thecalcaholic@users.noreply.github.com>

--- a/.github/workflows/mirror-to-gitlab.yml
+++ b/.github/workflows/mirror-to-gitlab.yml
@@ -29,5 +29,6 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         echo "${GITLAB_DEPLOY_KEY}" > ~/.ssh/id_ed25519
+        ssh-keygen -R gitlab.com
         git remote add gitlab git@gitlab.com:ncp-ci-bot/nextcloudpi-playground.git
         git push gitlab $GITHUB_REF
